--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,23 @@
   --fuuter-background-color: #2f303a;
   --prymary-background-color: #e5e5e5;
 }
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+ul {
+  margin: 0;
+  padding-left: 0;
+}
 
+img {
+  display: block;
+}
 body {
   color: var(--title-text-color);
   background-color: var(--primary-background-color);
@@ -27,10 +43,20 @@ body {
 .list {
   list-style: none;
 }
-a {
+.link {
   text-decoration: none;
 }
-/* HEADER */
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  outline: 2px solid tomato;
+}
+
+/* ---------------------HEADER -------------------*/
 .header {
   background-color: var(--title-background-color);
 
@@ -77,21 +103,11 @@ a {
 
 /* -------------------------PORTFOLIO -----------------------*/
 
-/* -------------------------section ---------------------------*/
-.section-title {
-  color: var(--primary-tex-color);
-
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-}
-
-.section-work {
-  display: none;
-}
 .portfolio {
   display: none;
+}
+.portfolio-section {
+  padding-top: 94px;
 }
 /* -----------------------Button nav-------------------------*/
 .section-nav .button {
@@ -106,7 +122,15 @@ a {
   cursor: pointer;
   border: none;
   letter-spacing: 0.03em;
+
+  border-radius: 4px;
+  padding: 6px 22px;
+  display: inline-block;
 }
+.section-nav {
+  margin-bottom: 50px;
+}
+
 .section-nav .button:hover,
 .section-nav .button:focus {
   color: var(--title-background-color);
@@ -129,6 +153,12 @@ a {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+
+  margin-top: 20px;
+  margin-bottom: 4px;
+}
+.work-text {
+  margin-bottom: 20px;
 }
 
 /* ---------------ОСНОВНАЯ СТРАНИЦА-------------------------- */
@@ -138,14 +168,24 @@ a {
   background-color: var(--fuuter-background-color);
   text-align: center;
   letter-spacing: 0.06em;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .hero-title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
+  text-transform: uppercase;
+
+  outline: 2px solid red;
+
+  max-width: 696px;
+  padding: 0 45px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
-.hero .button {
+.hero-button {
   font-family: inherit;
   color: var(--title-background-color);
   background-color: var(--accent-color);
@@ -153,27 +193,57 @@ a {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  align-items: center;
+
+  border: none;
+  border-radius: 4px;
+  padding: 10px 32px;
+  display: inline-block;
+  cursor: pointer;
 }
 .hero .button:hover {
   color: var(--title-text-color);
 }
-/* -----------------------peculiarities------------------- */
+/* -----------------------ОСОБЕННОСТИ------------------- */
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .peculiarities {
   display: none;
 }
 
+.section-title {
+  color: var(--primary-tex-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
 /* ------------------------Чем занимаемся------------------ */
+.classes {
+  padding-bottom: 94px;
+}
 .section-title-common {
   color: var(--primary-tex-color);
 
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
+  margin-bottom: 50px;
 }
 /* -------------------------TEAM --------------------------*/
 .section-team {
   background-color: var(--botton-background-color);
+  text-align: center;
+
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.photo {
+  margin-bottom: 30px;
 }
 .name {
   color: var(--primary-tex-color);
@@ -181,29 +251,39 @@ a {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+  margin-bottom: 10px;
+}
+.profession {
+  margin-bottom: 30px;
 }
 .team .resume {
   background-color: var(--title-background-color);
 
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
+  /* text-align: center; */
 }
 /* -------------------FUOOTER---------------------- */
+.page-footer {
+  background-color: var(--fuuter-background-color);
+  padding: 60px 0;
+}
+
 .logo-footer {
   color: var(--title-background-color);
+  display: block;
 
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
+  margin-bottom: 20px;
+  outline: 2px solid green;
 }
 .logo-footer span {
   color: var(--accent-color);
 }
-.page-footer {
-  background-color: var(--fuuter-background-color);
-}
+
 .page-footer .link {
   color: var(--title-background-color);
   font-style: normal;
@@ -214,4 +294,12 @@ a {
 .list .link:hover,
 .list .link:focus {
   color: var(--accent-color);
+}
+
+.footer-list-item {
+  display: block;
+  outline: 2px solid green;
+}
+.footer-list-item:nth-child(-n + 2) {
+  margin-bottom: 9px;
 }
