--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,17 @@
   --fuuter-background-color: #2f303a;
   --prymary-background-color: #e5e5e5;
 }
+
+body {
+  color: var(--title-text-color);
+  background-color: var(--primary-background-color);
+
+  font-family: Roboto, sans-serif;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+}
+
 p,
 h1,
 h2,
@@ -29,15 +40,8 @@ ul {
 
 img {
   display: block;
-}
-body {
-  color: var(--title-text-color);
-  background-color: var(--primary-background-color);
-
-  font-family: Roboto, sans-serif;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
+  max-width: 100%;
+  height: auto;
 }
 
 .list {
@@ -53,7 +57,6 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 2px solid tomato;
 }
 
 /* ---------------------HEADER -------------------*/
@@ -63,8 +66,15 @@ body {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+
+  border-bottom: 1px solid #ececec;
 }
+
 .logo {
+  display: flex;
+  padding: 32px 0;
+  margin-right: 93px;
+
   color: #000000;
 
   font-family: Raleway, sans-serif;
@@ -75,12 +85,34 @@ body {
 .logo span {
   color: var(--accent-color);
 }
+.outh-contact {
+  margin: 0 auto;
+}
 
 /*-------------------header navigation -------------------------- */
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+.nav {
+  display: flex;
+}
+
+.site-nav {
+  display: flex;
+}
+/* .site-nav-li:nth-child(-n + 2) {
+  margin-right: 50px;
+} */
+.site-nav-li:not(:last-child) {
+  margin-right: 50px;
+}
 
 .site-nav .link {
-  color: var(--primary-tex-color);
+  display: block;
+  padding: 32px 0;
 
+  color: var(--primary-tex-color);
   letter-spacing: 0.02em;
 }
 .site-nav .link:hover,
@@ -91,7 +123,17 @@ body {
   color: var(--accent-color);
 }
 
+.outh-nav {
+  display: flex;
+}
+.outh-nav-li:not(:last-child) {
+  margin-right: 50px;
+}
+
 .outh-nav .link {
+  display: block;
+  padding: 32px 0;
+
   color: var(--title-text-color);
 
   letter-spacing: 0.02em;
@@ -106,11 +148,13 @@ body {
 .portfolio {
   display: none;
 }
-.portfolio-section {
-  padding-top: 94px;
-}
+
 /* -----------------------Button nav-------------------------*/
 .section-nav .button {
+  display: inline-block;
+  border-radius: 4px;
+  padding: 6px 22px;
+
   color: var(--primary-tex-color);
 
   font-family: Roboto, sans-serif;
@@ -122,13 +166,11 @@ body {
   cursor: pointer;
   border: none;
   letter-spacing: 0.03em;
-
-  border-radius: 4px;
-  padding: 6px 22px;
-  display: inline-block;
 }
 .section-nav {
+  display: flex;
   margin-bottom: 50px;
+  justify-content: center;
 }
 
 .section-nav .button:hover,
@@ -140,22 +182,43 @@ body {
   color: var(--title-background-color);
   background-color: var(--accent-color);
 }
+.portfolio-button:not(:last-child) {
+  margin-right: 8px;
+}
+
+/* -----------WORK Portfolio---------------- */
 
 .work-exemple {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
+
   font-size: 16px;
   line-height: 1.87;
 }
 
+.work-list {
+  flex-basis: calc(100% / 3 - 30px);
+  margin-right: 30px;
+  margin-bottom: 30px;
+
+  box-sizing: border-box;
+}
+
+.desc {
+  border-bottom: 1px solid #eeeeee;
+}
 .work-exemple .type {
+  margin-top: 20px;
+  margin-bottom: 4px;
+
   color: var(--primary-tex-color);
 
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-
-  margin-top: 20px;
-  margin-bottom: 4px;
 }
 .work-text {
   margin-bottom: 20px;
@@ -164,28 +227,36 @@ body {
 /* ---------------ОСНОВНАЯ СТРАНИЦА-------------------------- */
 /* -----------------------Hero ------------------------------*/
 .hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+
   color: var(--title-background-color);
   background-color: var(--fuuter-background-color);
   text-align: center;
   letter-spacing: 0.06em;
-  padding-top: 200px;
-  padding-bottom: 200px;
 }
 .hero-title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-transform: uppercase;
-
-  outline: 2px solid red;
-
   max-width: 696px;
   padding: 0 45px;
   margin: 0 auto;
   margin-bottom: 30px;
-}
 
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-transform: uppercase;
+}
+/* ---------------------HERO BUTTON ------------------- */
 .hero-button {
+  display: inline-block;
+  border: none;
+  border-radius: 4px;
+  /* padding: 10px 32px; */
+  cursor: pointer;
+
+  min-width: 200px;
+  height: 50px;
+
   font-family: inherit;
   color: var(--title-background-color);
   background-color: var(--accent-color);
@@ -193,12 +264,6 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-
-  border: none;
-  border-radius: 4px;
-  padding: 10px 32px;
-  display: inline-block;
-  cursor: pointer;
 }
 .hero .button:hover {
   color: var(--title-text-color);
@@ -208,50 +273,76 @@ body {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+.features {
+  display: flex;
+}
+
 .peculiarities {
   display: none;
 }
+.sektion-list {
+  padding-right: 20px;
+}
+.sektion-list:not(:last-child) {
+  margin-right: 30px;
+}
 
 .section-title {
+  margin-bottom: 10px;
+
   color: var(--primary-tex-color);
 
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  margin-bottom: 10px;
 }
 
 /* ------------------------Чем занимаемся------------------ */
 .classes {
   padding-bottom: 94px;
 }
+.items {
+  display: flex;
+}
+
+.items-img:not(:last-child) {
+  margin-right: 30px;
+}
+
 .section-title-common {
+  margin-bottom: 50px;
+
   color: var(--primary-tex-color);
 
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-  margin-bottom: 50px;
 }
 /* -------------------------TEAM --------------------------*/
 .section-team {
   background-color: var(--botton-background-color);
   text-align: center;
-
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
+
+.team {
+  display: flex;
+}
+.resume:not(:last-child) {
+  margin-right: 30px;
+}
+
 .photo {
   margin-bottom: 30px;
 }
 .name {
+  margin-bottom: 10px;
+
   color: var(--primary-tex-color);
 
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  margin-bottom: 10px;
 }
 .profession {
   margin-bottom: 30px;
@@ -261,24 +352,23 @@ body {
 
   font-size: 16px;
   line-height: 1.19;
-  /* text-align: center; */
 }
 /* -------------------FUOOTER---------------------- */
 .page-footer {
-  background-color: var(--fuuter-background-color);
   padding: 60px 0;
+
+  background-color: var(--fuuter-background-color);
 }
 
 .logo-footer {
-  color: var(--title-background-color);
   display: block;
+  margin-bottom: 20px;
 
+  color: var(--title-background-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
-  margin-bottom: 20px;
-  outline: 2px solid green;
 }
 .logo-footer span {
   color: var(--accent-color);
@@ -296,10 +386,16 @@ body {
   color: var(--accent-color);
 }
 
+/* .footer-list {
+  display: block;
+} */
+
 .footer-list-item {
   display: block;
-  outline: 2px solid green;
 }
-.footer-list-item:nth-child(-n + 2) {
+/* .footer-list-item:nth-child(-n + 2) {
+  margin-bottom: 9px;
+} */
+.footer-list-item:not(:last-child) {
   margin-bottom: 9px;
 }
